@@ -32,3 +32,18 @@ class Local(TextureHandler):
 
         self._logger.trace("Resolved texture '%s' to '%s'", file_name, return_value)
         return return_value
+
+    def is_texture(self, uri):
+        """ Returns whether the uri points to a local resource or remote
+
+        :param str uri: The URI for the texture
+
+        :returns: Indicator whether or not the resource is local
+        :rtype: bool
+
+        """
+
+        if not uri:
+            return True
+
+        return not uri.startswith("http://") and not uri.startswith("https://")
